# hw9-web

./: pyproject.toml
Lib/: config.ini
Scripts/: connect.py  models.py  querying.py  scrape.py  seed.py
