[tool.poetry]
name = "hw9-web"
version = "0.1.0"
description = "hw9-web"
authors = ["anton-akulenko <anton.htl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw9_web"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
mongoengine = "^0.27.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
